--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@ form .btn2 {
     background: #ff4057;
     transition: 0.5s;
 }
+
 form .btn2:hover {
     box-shadow: 0px 0px 20px #ff4057;
 }
@@ -289,9 +290,10 @@ form .btn2:hover {
 
 @media screen and (max-width: 600px) {
     .navbar {
-        padding: 20px 10%;
-        position: relative;
-        background-color: transparent;
+        padding: 10px 10%;
+    }
+    #home .container{
+        padding: 40% 10%;
     }
 
     .logo {
